# fuel-nft-indexer

./: .gitignore  .prettierrc  Cargo.toml  README.md  config.yaml  manifest.testnet.yaml  manifest.yaml
abi/: NFT-abi.json  nft-abi.json
contracts/: README.md
contracts/src/: main.sw
nft/src/: interface.sw  main.sw
schema/: schema.graphql
scripts/: build_nft_contract.sh  wasm_snip.sh
src/: lib.rs
