[package]
name = "fuel-nft-indexer"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-macros = { version = "0.1.7", default-features = false }
fuel-indexer-plugin = { version = "0.1.7" }
fuel-indexer-schema = { version = "0.1.7", default-features = false }
fuel-tx = "0.23.1"
fuels-core = "0.31.1"
fuels-types = "0.31.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
